--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <ul>HOME</ul>
-    <ul>ABOUT</ul>
-    <ul>MUSIC</ul>
-    <ul>CONTACT</ul>
+    <a href="./index.html"><ul>HOME</ul></a>
+    <a href="./about.html"><ul>ABOUT</ul></a>
+    <a href="./music.html"><ul>MUSIC</ul></a>
+    <a href="./contact.html"><ul>CONTACT</ul></a>
     <ul>
         <div class="iconos">
             <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -29,7 +29,19 @@
         <br>
         <br>
         <br>
+    
         <h2>E M I L I A<br>C O L E //</h2>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="Titulo-principal">
+            <h1>TWIST IN MY REALITY</h1>
+        </div>
 
 
     </ul>
