--- a/about.html
+++ b/about.html
@@ -7,7 +7,20 @@
 </head>
 
 <body>
-
+    <div class="Texto-paginas">
+        <a href="./index.html">
+            <ul>|HOME|</ul>
+        </a>
+        <a href="./about.html">
+            <ul>|ABOUT|</ul>
+        </a>
+        <a href="./music.html">
+            <ul>|MUSIC|</ul>
+        </a>
+        <a href="./contact.html">
+            <ul>|CONTACT</ul>
+        </a>
+    </div>
 </body>
 
 </html>
