Arregle home y agregue about

--- a/about.html
+++ b/about.html
@@ -7,20 +7,16 @@
 </head>
 
 <body>
-    <div class="Texto-paginas">
-        <a href="./index.html">
-            <ul>|HOME|</ul>
-        </a>
-        <a href="./about.html">
-            <ul>|ABOUT|</ul>
-        </a>
-        <a href="./music.html">
-            <ul>|MUSIC|</ul>
-        </a>
-        <a href="./contact.html">
-            <ul>|CONTACT</ul>
-        </a>
-    </div>
+    <header>
+        <div class="contenedor">
+            <nav class="menu">
+                <a href="./index.html">| HOME |</a>
+                <a href="./about.html">| ABOUT |</a>
+                <a href="./music.html">| MUSIC |</a>
+                <a href="./contact.html">| CONTACT |</a>
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
