--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 </head>
 
 <body>
-    <a href="./index.html"><ul>HOME</ul></a>
-    <a href="./about.html"><ul>ABOUT</ul></a>
-    <a href="./music.html"><ul>MUSIC</ul></a>
-    <a href="./contact.html"><ul>CONTACT</ul></a>
+    <a href="./index.html">
+        <ul>HOME</ul>
+    </a>
+    <a href="./about.html">
+        <ul>ABOUT</ul>
+    </a>
+    <a href="./music.html">
+        <ul>MUSIC</ul>
+    </a>
+    <a href="./contact.html">
+        <ul>CONTACT</ul>
+    </a>
     <ul>
         <div class="iconos">
             <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -29,8 +37,8 @@
         <br>
         <br>
         <br>
-    
-        <h2>E M I L I A<br>C O L E //</h2>
+
+        <h2>E M I L I A<br>C O L E / /</h2>
         <br>
         <br>
         <br>
