Mejore mas el home

--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
         <br>
         <br>
         <br>
-        <div class="Titulo-principal">
-            <h1>TWIST IN MY REALITY</h1>
-        </div>
+
 
 
     </ul>
-
+    <h1 class="titulo">TWIST IN MY REALITY</h1>
 
 
 </body>
