--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <title>Ejercico numero 2</title>
     <script src="https://kit.fontawesome.com/7a118e242d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/stlye.css">
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-    <a href="./index.html">
-        <ul>HOME</ul>
-    </a>
-    <a href="./about.html">
-        <ul>ABOUT</ul>
-    </a>
-    <a href="./music.html">
-        <ul>MUSIC</ul>
-    </a>
-    <a href="./contact.html">
-        <ul>CONTACT</ul>
-    </a>
-    <ul>
+    <div id="app.js">
+        <!--Enlaces a las otras paginas-->
+        <ul id="enlaces">
+            <li><a href="./index.html" style="text-decoration: none;"><b style="color: rgba(0, 0, 0, 0.6);">HOME</b></a></li>
+            <br>
+            <li><a href="./about.html" style="text-decoration: none;"><b style="color: rgba(0, 0, 0, 0.6);" >ABOUT</b></a></li>
+            <br>
+            <li><a href="./music.html" style="text-decoration: none;"><b style="color: rgba(0, 0, 0, 0.6);">MUSIC</b></a></li>
+            <br>
+            <li><a href="./contact.html" style="text-decoration: none;"><b style="color: rgba(0, 0, 0, 0.6);">CONTACT</b></a></li>
+        </ul>
+        <!--Iconos de redes sociales-->
         <div class="iconos">
             <i class="fa fa-twitter" aria-hidden="true"></i>
             <i class="fa fa-facebook-square" aria-hidden="true"></i>
@@ -29,30 +29,11 @@
             <i class="fa fa-amazon" aria-hidden="true"></i>
             <i class="fa fa-instagram" aria-hidden="true"></i>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
 
-        <h2>E M I L I A<br>C O L E / /</h2>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <h2 id="emilia-cole">E M I L I A<br>C O L E //</h2>
 
-
-
-    </ul>
-    <h1 class="titulo">TWIST IN MY REALITY</h1>
-
+        <h1 class="titulo">TWIST IN MY REALITY</h1>
+    </div>
 
 </body>
 
