--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Ejercico numero 2</title>
     <script src="https://kit.fontawesome.com/7a118e242d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/stlye.css">
+    <meta name="viewport" content="width=device-width, user-scalable=0.1">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 </head>
 
