--- a/about.html
+++ b/about.html
@@ -4,19 +4,32 @@
 <head>
     <title>Ejercico numero 2</title>
     <link rel="stylesheet" href="css/about.css">
+    <script src="https://kit.fontawesome.com/7a118e242d.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, user-scalable=1">
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 </head>
 
+
 <body>
-    <header>
-        <div class="contenedor">
-            <nav class="menu">
-                <a href="./index.html">| HOME |</a>
-                <a href="./about.html">| ABOUT |</a>
-                <a href="./music.html">| MUSIC |</a>
-                <a href="./contact.html">| CONTACT |</a>
-            </nav>
+    <div id="app2">
+        <nav id="enlaces-about">
+            <a href="./index.html" style="text-decoration: none;"><b style="color: rgba(0, 0, 0, 0.6);">| HOME |</b></a>
+            <a href="./about.html" style="text-decoration: none;"><b style="color: rgba(0, 0, 0, 0.6);" > ABOUT |</b></a>
+            <a href="./music.html" style="text-decoration: none;"><b style="color: rgba(0, 0, 0, 0.6);">MUSIC |</b></a>
+            <a href="./contact.html" style="text-decoration: none;"><b style="color: rgba(0, 0, 0, 0.6);">CONTACT |</b></a>
+        </nav>
+
+        <div id="iconos">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+            <i class="fa fa-spotify" aria-hidden="true"></i>
+            <i class="fa fa-apple" aria-hidden="true"></i>
+            <i class="fa fa-amazon" aria-hidden="true"></i>
+            <i class="fa fa-instagram" aria-hidden="true"></i>
         </div>
-    </header>
+
+        <h1 id="titulo">ABOUT <br> EMILIA //</h1>
+    </div>
 </body>
 
 </html>
